--- a/2_Advanced/seaborn.ipynb
+++ b/2_Advanced/seaborn.ipynb
@@ -272,7 +272,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Look into seaborn plots to see what different plots I can make after getting my own data and doing plots"
+    "#Look into seaborn plots to see what different plots I can make after getting my own data and doing plots\n",
+    "#find website and add different plots here"
    ]
   }
  ],
