--- a/1_Basics/pandas_basics.ipynb
+++ b/1_Basics/pandas_basics.ipynb
@@ -1027,6 +1027,7 @@
     "\n",
     "#df.iloc[90:100, 0:2]\n",
     "#rows 90-99 with calling the first two columns, job_title_short and job_location\n",
+    "#explore how you can get certain rows with if statement, like if the column has job in the title then return those indexes using the first method of iloc that's commented\n",
     "\n",
     "df[[\"job_title_short\", \"job_location\"]].iloc[90:100]"
    ]
@@ -1812,7 +1813,9 @@
     }
    ],
    "source": [
+    "#groupby is used to make dataframes with agg functions such as sum, median, mean, count, size, etc\n",
     "#df.groupby(\"columns to group\")[\"columns to aggregate\"].your_agg_method\n",
+    "#this groupby makes the index job_title_short and looks at the median salary_year_avg values for each job title\n",
     "\n",
     "df.groupby(\"job_title_short\")[\"salary_year_avg\"].median()"
    ]
@@ -1846,7 +1849,7 @@
     }
    ],
    "source": [
-    "#if we want to groupby multiple columns, we need to make it a list\n",
+    "#if we want to groupby multiple columns, we need to make it a list and it applies the agg function to both columns together\n",
     "\n",
     "df.groupby([\"job_title_short\", \"job_country\"])[\"salary_year_avg\"].median()"
    ]
@@ -1962,7 +1965,7 @@
     }
    ],
    "source": [
-    "#we want to aggregate on multiple columns\n",
+    "#if we want to aggregate on multiple columns, then make the second part a list and it will apply the agg function to different columns\n",
     "\n",
     "df.groupby(\"job_title_short\")[[\"salary_year_avg\", \"salary_hour_avg\"]].median()"
    ]
